# ddddocr-http-api

./: .dockerignore  Dockerfile  README.md  README_cn.md  compose.yml  entrypoint.sh  main.py  pyproject.toml
api/: middleware.py
app/: middleware.py  server.py
test/: api_test.py
